Update tests
